# encoding-subcolumn

./: .gitignore  R0_merge_compression_ratio_time_de.py  R1D1_R1D4_R3O1_query.py  R1D3_materialization.py  R1D6_compare_sort_key_and_value.py  R1D7_aggregation_vs_null_rate.py  R1D8_compare_parallel_filter.py  R2O1_compare_update_new.py  R2O2_add_dictionary.py  R3O2_compare_pso.py  R4O5_compression_vs_beta(a).py  R4O6_ablation_study.py  README.md  ablation_study.py  compression_ratio.py  compression_time.py  compression_vs_beta.py  compression_vs_block_boxplot.py  compression_vs_block_prune_mean_line.py  decimal_8_distribution.py  decompression_time.py  merge_compression_cost_beta_merged_row.py  merge_compression_ratio_time_de_relayout.py  query_vs_beta_boxplot.py  query_vs_block_boxplot.py  requirements.txt
tsfile/: NOTICE  (+9 more)
tsfile/cpp/: .clang-format  .gitignore  CMakeLists.txt  README-zh.md  README.md  VersionUpdater.groovy  pom.xml
tsfile/cpp/examples/: CMakeLists.txt  README.md  build.sh  examples.cc
tsfile/cpp/examples/c_examples/: c_examples.h  demo_read.c  demo_write.c
tsfile/cpp/examples/cpp_examples/: cpp_examples.h  demo_read.cpp  demo_write.cpp
tsfile/cpp/src/: CMakeLists.txt
tsfile/cpp/src/common/: CMakeLists.txt  db_common.h  device_id.h  global.cc  global.h  path.h  record.h  row_record.h  schema.h  statistic.h  tablet.cc  tablet.h  tsfile_common.cc  tsfile_common.h
tsfile/cpp/src/common/allocator/: alloc_base.h  byte_stream.h  mem_alloc.cc  my_string.h  page_arena.cc  page_arena.h
tsfile/cpp/src/common/cache/: lru_cache.h
tsfile/cpp/src/common/config/: config.h
tsfile/cpp/src/common/constant/: tsfile_constant.h
tsfile/cpp/src/common/container/: byte_buffer.h  list.h  murmur_hash3.cc  sorted_array.h
tsfile/cpp/src/common/datatype/: date_converter.h  value.h
tsfile/cpp/src/common/mutex/: mutex.h
tsfile/cpp/src/common/tsblock/: tsblock.cc  tsblock.h  tuple_desc.cc  tuple_desc.h
tsfile/cpp/src/compress/: CMakeLists.txt  gzip_compressor.cc  gzip_compressor.h  lz4_compressor.cc  lz4_compressor.h  lzo_compressor.h  snappy_compressor.cc  snappy_compressor.h
tsfile/cpp/src/cwrapper/: CMakeLists.txt  errno_define_c.h  tsfile_cwrapper.cc  tsfile_cwrapper.h  tsfile_cwrapper_expression.cc  tsfile_cwrapper_expression.h
tsfile/cpp/src/encoding/: CMakeLists.txt  decoder.h  decoder_factory.h  dictionary_decoder.h  dictionary_encoder.h  double_sprintz_decoder.h  double_sprintz_encoder.h  encode_utils.h  encoder.h  encoder_factory.h  fire.h  float_sprintz_decoder.h  float_sprintz_encoder.h  gorilla_decoder.h  gorilla_encoder.h  int32_packer.h  int32_rle_decoder.h  int32_rle_encoder.h  int32_sprintz_decoder.h  int32_sprintz_encoder.h  int64_packer.h  int64_rle_decoder.h  int64_rle_encoder.h  int64_sprintz_decoder.h  int64_sprintz_encoder.h  plain_decoder.h  plain_encoder.h  sprintz_decoder.h  sprintz_encoder.h  ts2diff_decoder.h  ts2diff_encoder.h  zigzag_decoder.h  zigzag_encoder.h
tsfile/cpp/src/file/: CMakeLists.txt  open_file.cc  tsfile_io_reader.cc  tsfile_io_reader.h  tsfile_io_writer.cc  tsfile_io_writer.h  write_file.cc  write_file.h
tsfile/cpp/src/parser/: CMakeLists.txt  path_nodes_generator.cpp  path_nodes_generator.h  path_parser_error.h  path_visitor.cpp  path_visitor.h
tsfile/cpp/src/reader/: CMakeLists.txt  aligned_chunk_reader.cc  aligned_chunk_reader.h  bloom_filter.cc  bloom_filter.h  chunk_reader.cc  chunk_reader.h  column_mapping.h  device_meta_iterator.cc  device_meta_iterator.h  expression.cc  expression.h  ichunk_reader.h  imeta_data_querier.h  meta_data_querier.cc  meta_data_querier.h  qds_with_timegenerator.cc  qds_with_timegenerator.h  qds_without_timegenerator.cc  qds_without_timegenerator.h  result_set.h  scan_iterator.cc  scan_iterator.h  table_query_executor.cc  table_query_executor.h  table_result_set.cc  table_result_set.h  tsfile_executor.cc  tsfile_executor.h  tsfile_reader.cc  tsfile_reader.h  tsfile_series_scan_iterator.cc  tsfile_series_scan_iterator.h  tsfile_tree_reader.cc  tsfile_tree_reader.h
tsfile/cpp/src/reader/block/: device_ordered_tsblock_reader.cc  device_ordered_tsblock_reader.h  single_device_tsblock_reader.cc  single_device_tsblock_reader.h  tsblock_reader.h
tsfile/cpp/src/reader/filter/: CMakeLists.txt  and_filter.h  filter.h  object.h  or_filter.h  tag_filter.cc  tag_filter.h  time_operator.cc  time_operator.h
tsfile/cpp/src/reader/task/: device_query_task.cc  device_query_task.h  device_task_iterator.cc  device_task_iterator.h
tsfile/cpp/src/utils/: CMakeLists.txt  db_utils.h  errno_define.h  injection.h  storage_utils.h  util_define.h
tsfile/cpp/src/writer/: CMakeLists.txt  chunk_writer.cc  chunk_writer.h  page_writer.cc  page_writer.h  time_chunk_writer.cc  time_chunk_writer.h  time_page_writer.cc  time_page_writer.h  tsfile_table_writer.cc  tsfile_table_writer.h  tsfile_tree_writer.cc  tsfile_tree_writer.h  tsfile_writer.cc  tsfile_writer.h  value_chunk_writer.cc  value_chunk_writer.h  value_page_writer.cc  value_page_writer.h
tsfile/cpp/test/: CMakeLists.txt
tsfile/cpp/test/common/: device_id_test.cc  record_test.cc  row_record_test.cc  schema_test.cc  statistic_test.cc  tablet_test.cc  tsfile_common_test.cc
tsfile/cpp/test/common/allocator/: byte_stream_test.cc  page_arena_test.cc
tsfile/cpp/test/common/datatype/: date_converter_test.cc
tsfile/cpp/test/common/tsblock/: tslock_test.cc  tuple_desc_test.cc
tsfile/cpp/test/compress/: gzip_compressor_test.cc
tsfile/cpp/test/cwrapper/: c_release_test.cc  cwrapper_test.cc
tsfile/cpp/test/encoding/: dictionary_codec_test.cc  gorilla_codec_test.cc  int32_packer_test.cc  int32_rle_codec_test.cc  int64_packer_test.cc  int64_rle_codec_test.cc  plain_codec_test.cc  sprintz_codec_test.cc  ts2diff_codec_test.cc
tsfile/cpp/test/file/: write_file_test.cc
tsfile/cpp/test/parser/: path_name_test.cc
tsfile/cpp/test/reader/: bloom_filter_test.cc  tsfile_reader_test.cc
tsfile/cpp/test/utils/: db_utils_test.cc
tsfile/cpp/test/writer/: chunk_writer_test.cc  time_chunk_writer_test.cc  tsfile_writer_test.cc  value_chunk_writer_test.cc
(+394 files in other folders)
